[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = flake8_rst_napoleon_docstrings

author = James Douglass
author_email = jamesdouglassusa@gmail.com
maintainer = James Douglass
maintainer_email = jamesdouglassusa@gmail.com


version = 0.0.1

description = Flake8 linter for sphinx.ext.napoleon-parsed Google/Numpy-style docstrings
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flake8,

url =
download_url =

license = MIT license

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Framework :: Flake8

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
flake8.extension =
    NAP=flake8_rst_napoleon_docstrings:Plugin
